mobile line wrapping bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-    /* body {
-        font-family: serif;
-    } */
+code[class*="language-"], pre[class*="language-"] {
+    white-space: pre-wrap !important;
+    word-break: break-word !important;
 }
